crates/glyph-cli/tests/corpus/valid/imports/repo_tools.glyph
export block inspect_repo(scope = "." <"directory to inspect">) -> Report
    effects: reads_files
    description: "Inspect the repository structure and codebase."
    flow:
        "Examine the repository at {scope} and build context."
        return context
